--- a/pg_hba.conf
+++ b/pg_hba.conf
@@ -2,3 +2,5 @@ local   all             postgres                                peer
 host    all             all             127.0.0.1/32            scram-sha-256
 host    all             all             0.0.0.0/0               md5
 host    replication     repl_user       0.0.0.0/0               md5
+host    all    all    127.0.0.1/32    trust
+   
