--- a/.env
+++ b/.env
@@ -1,8 +1,6 @@
-TOKEN = 7037353199:AAGr4Jmb9uTyF6ZjBXKThHrd1D-LTZf3J-0
+TOKEN =  
 
  
-PATH_TO_LOGFILE = Telegram_Bot_Logfile.txt
-PATH_TO_TEMPFILE = TempList.txt
 RM_HOST = 192.168.253.149
 RM_PORT = 22 #- будет содержать порт удаленного хоста, к которому будем подключаться
 RM_USER = kali #- будет содержать пользователя удаленного хоста
